Add validation and update document
Signed-off-by: Aiden Dai <daixb@amazon.com>